docs: improved content

--- a/stanza/Stanza.ipynb
+++ b/stanza/Stanza.ipynb
@@ -49,6 +49,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "At the time of development, Stanza's version is 1.5.0 and Nltk's version is 3.8.1\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "nU3Bx-05y3T4"
       },
@@ -1501,8 +1509,14 @@
         "id": "EilfmKWqLN_l"
       },
       "source": [
-        "### Finally, let's check the [local development guide](https://pal0064.github.io/nlp_tutorials/local_development.html)"
+        "Finally, let's move to the next page(https://pal0064.github.io/nlp_tutorials/stanza/index.html#LearnMore)"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
