--- a/trainer.ipynb
+++ b/trainer.ipynb
@@ -46,14 +46,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_parquet(data_path)\n",
+    "df = pd.read_parquet(data_path)\n",
     "drop_cols = ['region','state_x','latitude','longitude','parent_metro_region','state_y','price_drops','price_drops_yoy','pending_sales_yoy','off_market_in_two_weeks_yoy']\n",
-    "data = data.drop(columns=drop_cols)\n",
-    "data = data.dropna()\n",
-    "data['period_begin'] = pd.to_datetime(data['period_begin'])\n",
-    "data['period_end'] = pd.to_datetime(data['period_end'])\n",
+    "df = df.drop(columns=drop_cols)\n",
+    "df = df.dropna()\n",
+    "df['period_begin'] = pd.to_datetime(df['period_begin'])\n",
+    "df['period_end'] = pd.to_datetime(df['period_end'])\n",
     "int_columns = ['median_sale_price', 'homes_sold', 'inventory', 'irs_estimated_population']\n",
-    "data[int_columns] = data[int_columns].astype(float)"
+    "df[int_columns] = df[int_columns].astype(float)"
    ]
   },
   {
@@ -160,6 +160,10 @@
     "    'learning_rate': [0.01, 0.1, 0.2],\n",
     "    'max_depth': [3, 4, 5]\n",
     "}\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50],\n",
+    "    'learning_rate': [0.2],\n",
+    "    'max_depth': [3]}\n",
     "\n",
     "# Initialize GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, scoring='neg_mean_squared_error', cv=3)\n",
@@ -169,13 +173,10 @@
     "\n",
     "# Get the best hyperparameters\n",
     "best_params = grid_search.best_params_\n",
-    "\n",
-    "# Train the model with the best hyperparameters\n",
     "best_model = grid_search.best_estimator_\n",
-    "\n",
-    "# Make predictions on the test set\n",
     "predictions = best_model.predict(X_test_scaled)\n",
-    "\n",
+    "import joblib\n",
+    "joblib.dump(best_model, 'streamlit_tutorial/prediction_model_tuned.joblib')\n",
     "# Evaluate the model\n",
     "mse = mean_squared_error(y_test, predictions)\n",
     "print(f'Mean Squared Error: {mse}')\n"
@@ -196,7 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib"
+    "import joblib\n",
+    "joblib.dump(best_model, 'streamlit_tutorial/prediction_model_tuned.joblib')"
    ]
   },
   {
@@ -217,7 +219,7 @@
     }
    ],
    "source": [
-    "joblib.dump(best_model, 'prediction_model.joblib')"
+    "joblib.dump(best_model, 'prediction_model_tuned.joblib')"
    ]
   },
   {
@@ -227,10 +229,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# md = joblib.load('prediction_model.joblib')\n",
-    "# prd=md.predict(X_test_scaled)\n",
-    "# mse = mean_squared_error(y_test, prd)\n",
-    "# print(f'Mean Squared Error: {mse}')"
+    "md = joblib.load('streamlit_tutorial/prediction_model_tuned.joblib')\n",
+    "prd=md.predict(X_test_scaled)\n",
+    "mse = mean_squared_error(y_test, prd)\n",
+    "print(f'Mean Squared Error: {mse}')"
    ]
   },
   {
